Changelog
=========

1.3.1 - unreleased
------------------

- Removed ZODB cache warming code - it didn't actually help in practice.

1.3.0 - 2011-07-09
------------------

- INTRANETT-237: Add project rooms.

- Update to PloneFormGen bugfix release to fix quick-edit deletion of fields.

- INTRANETT-196: Disabled half-finished highlight portlets.

- INTRANETT-239: Add personal folders.

- INTRANETT-240: Add file size validator and provide help texts stating the
  50mb upload limit, while limiting Nginx to 500mb.

- INTRANETT-223: The content menu is visible by default.

- INTRANETT-228: Open external links, including the link to `hjelp.intranett.no`
  in a new window.

- INTRANETT-214: Site admins can delete comments.

- INTRANETT-121: Prevent employee listing from breaking when no department is
  defined.

- INTRANETT-120: Update to Plone 4.1rc3.

- INTRANETT-177: Prevent anonymous access to files and images.

- INTRANETT-235: Automatically log in the user after account activation.

- Update to Zope 2.13.8 to fix privilege escalation vulnerability.

- Increase `zodb-cache-size` to 10000 now that we save memory via DateTime.

- Update to DateTime 3.

- Use the `catalogCounter` instead of `lastModified` as an etag element for
  item views. This solves problems with comments not being shown and changes
  to the navigation tree and portal tabs not being reflected.

1.2.11 - 2011-06-28
-------------------

- Update to Zope 2.12.19 to fix privilege escalation vulnerability.

1.2.10 - 2011-06-27
-------------------

- Fix a flaw in the user creation script, which didn't actually create any user.

1.2.9 - 2011-06-22
------------------

- Sent out custom account activation mail. Closes INTRANETT-231.

- Fix the account activation mail to be in Norwegian. Closes INTRANETT-218.

1.2.8 - 2011-06-05
------------------

- Include Products.PloneHotfix20110531 2.0.

- Added new `create_site_admin` script.

- Change Nginx configuration to work without knowing the hostname.
